--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_deploy:
 
 deploy:
   provider: releases
-  api_key: $GITHUB_TOKEN
+  api_key: \$GITHUB_TOKEN
   file: RU.zip
   skip_cleanup: true
   on:
