--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ before_deploy:
 
 deploy:
   provider: releases
-  github_token: "\$GITHUB_TOKEN"
+  #github_token: "\$GITHUB_TOKEN"
   file: "RU.zip"
   skip_cleanup: true
   on:
