--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_deploy:
 deploy:
   provider: releases
   github_token: \$GITHUB_TOKEN
-  file: RU.zip
+  file: "RU.zip"
   skip_cleanup: true
   on:
     tags: true
